# nanodjango-bolt

./: README.md  pyproject.toml
docs/: asgi_bridge_internals.md  research-to-write-nanodjango-plugin.md
examples/: helloworld.py  myapp.py  streamapp.py  streamappadmin.py
nanodjango_bolt/: __init__.py
tests/: conftest.py  hello_ninja_api.py  test_bolt_api.py  test_hooks.py
