[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanodjango-bolt"
version = "0.1.2"
description = "django-bolt plugin for nanodjango single-file apps"
requires-python = ">=3.12"
dependencies = [
  "nanodjango @ file:///Users/clee/code/datastar_learn/ext/nanodjango",
  #    "django-bolt @ git+https://github.com/dj-bolt/django-bolt.git",
  "django-bolt @ file:///Users/clee/code/datastar_learn/ext/django-bolt",

]

[project.entry-points."nanodjango"]
bolt = "nanodjango_bolt"

[tool.setuptools.packages.find]
include = ["nanodjango_bolt*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
]
