[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanodjango-bolt"
version = "0.1.3"
description = "django-bolt plugin for nanodjango single-file apps"
requires-python = ">=3.12"
dependencies = [
  "nanodjango",
  "django-bolt<=0.7",
]

[project.entry-points."nanodjango"]
bolt = "nanodjango_bolt"

[tool.setuptools.packages.find]
include = ["nanodjango_bolt*"]

# [tool.uv.sources]
# nanodjango = { path = "nanodjango", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "pytest>=9.0.2",
]
